[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freekassa-client"
version = "0.1.6"
description = "Simple FreeKassa payment client for Python"
authors = [
    { name="Alexandr", email="ad.azarov17k@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8.0"
license = {text = "MIT"}

keywords = ["freekassa", "payment", "api", "ecommerce"]

dependencies = [
    "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["freekassa_client"]

[project.urls]
Homepage = "https://github.com/418-th/freekassa"
Source = "https://github.com/418-th/freekassa"
